--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ body {
 
 .deck-card {
   height: 400px;
-  width: 200px;
+  width: 300px;
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 16px;
@@ -67,13 +67,12 @@ body {
 .deck-card p {
   font-size: 16px;
   margin: 8px 0;
-  color: #666;
+  color: #1a1a1a;
 }
 
 .deck-card .price {
   font-size: 18px;
   font-weight: bold;
-  color: #007bff;
 }
 
 .back {
@@ -89,6 +88,8 @@ body {
 
 .deck-card button {
   font-style: italic;
-  background-color: red;
-  margin-top: 30%;
+  background-color: rgb(251, 251, 251);
+  padding: 8px;
+  border-radius: 6px;
+  border: 2px solid rgba(8, 11, 119, 0.5);
 }
