--- a/index.css
+++ b/index.css
@@ -55,6 +55,10 @@ body {
   font-size: 20px;
   margin-bottom: 10px;
   color: #333;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .deck-card img {
