--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -34,7 +35,6 @@ body {
 }
 
 .deck-card {
-  height: 400px;
   width: 300px;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -90,7 +90,7 @@ body {
   gap: 20px;
 }
 
-.deck-card button {
+button {
   font-style: italic;
   background-color: rgb(251, 251, 251);
   padding: 8px;
