--- a/index.css
+++ b/index.css
@@ -96,4 +96,9 @@ button {
   padding: 8px;
   border-radius: 6px;
   border: 2px solid rgba(8, 11, 119, 0.5);
+  cursor: pointer;
 }
+
+/* img {
+  cursor: pointer;
+} */
