--- a/details.css
+++ b/details.css
@@ -1,29 +1,3 @@
-/* .left-card-side {
-  display: flex;
-  flex-direction: column;
-}
-
-.first-deck {
-  width: 500px;
-}
-.bottom-pics img {
-  width: 150px;
-}
-
-.deck-description-card {
-  display: flex;
-  align-items: center;
-  gap: 1.5rem;
-  padding: 1rem;
-  margin: 56px;
-  background-color: rgba(179, 181, 232, 0.5);
-  border: 1px solid #ddd;
-  border-radius: 12px;
-  margin-bottom: 1rem;
-  overflow: hidden;
-} */
-
-/* styles.css */
 /* body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -31,16 +5,8 @@
   background-color: #f4f4f9;
 } */
 
-/* styles.css */
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 20px;
-  background-color: #f4f4f9;
-}
-
 .deck-card-details {
-  width: 1722px;
+  width: 1766px;
   display: flex;
   gap: 20px;
   margin: 0 auto;
@@ -75,26 +41,39 @@ body {
 .deck-details {
   display: flex;
   flex-direction: column;
+  gap: 15px;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 600px;
+  margin: 20px auto;
+  text-align: justify;
 }
 
 .deck-name {
   font-size: 24px;
+  font-weight: bold;
   margin-bottom: 10px;
   color: #333;
+  margin: 0;
 }
 
 .deck-price {
+  font-weight: bold;
   font-size: 20px;
   color: #28a745;
-  margin-bottom: 10px;
+  margin: 0;
 }
 
 .deck-description {
-  font-size: 16px;
+  font-size: 25px;
   color: #000000;
   margin-bottom: 10px;
+  margin: 0;
 }
-
+.deck-stock {
+  font-size: 14px;
+  margin: 0;
+}
 .deck-stock span {
   font-weight: bold;
   color: #28a745;
